--- a/package.json
+++ b/package.json
@@ -42,7 +42,13 @@
   },
   "overrides": {
     "@twilio/runtime-handler@^1.2.3": {
-      "moment": ">=2.29.2"
+      "moment": ">=2.29.4"
+    },
+    "twilio-run@^3.4.2": {
+      "got": ">=11.8.5",
+      "@twilio-labs/serverless-api@5.4.2": {
+        "file-type": ">=16.5.4"
+      }
     }
   },
   "devDependencies": {
